# ChangeLog for dev-ruby/sinatra
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sinatra/ChangeLog,v 1.52 2015/01/24 09:11:18 graaff Exp $

  24 Jan 2015; Hans de Graaff <graaff@gentoo.org> -sinatra-1.3.3.ebuild,
  -sinatra-1.4.3.ebuild, -sinatra-1.4.4.ebuild:
  Cleanup.

  09 Dec 2014; Manuel Rüger <mrueg@gentoo.org>
  -files/sinatra-1.0-haml3-tests.patch, -files/sinatra-1.3.1-rdoc-require.patch,
  -files/sinatra-1.3.1-rdoc-tests.patch:
  Remove unused files.

  15 Aug 2014; Anthony G. Basile <blueness@gentoo.org> sinatra-1.3.3.ebuild,
  sinatra-1.4.3.ebuild, sinatra-1.4.4.ebuild, sinatra-1.4.5.ebuild:
  Keyword ~ppc ~ppc64, bug #511424

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> sinatra-1.3.3.ebuild,
  sinatra-1.4.3.ebuild, sinatra-1.4.4.ebuild, sinatra-1.4.5.ebuild:
  Remove trailing '.' from DESCRIPTION.

  20 Apr 2014; Hans de Graaff <graaff@gentoo.org> sinatra-1.4.5.ebuild:
  Add ruby21.

*sinatra-1.4.5 (16 Apr 2014)

  16 Apr 2014; Hans de Graaff <graaff@gentoo.org> +sinatra-1.4.5.ebuild:
  Version bump.

  05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> sinatra-1.3.3.ebuild,
  sinatra-1.4.3.ebuild, sinatra-1.4.4.ebuild:
  Remove ree18 and ruby18 target.

*sinatra-1.4.4 (21 Nov 2013)

  21 Nov 2013; Hans de Graaff <graaff@gentoo.org> +sinatra-1.4.4.ebuild,
  +files/sinatra-1.4.4-fix-tests.patch:
  Version bump. Add ruby20.

*sinatra-1.4.3 (17 Aug 2013)

  17 Aug 2013; Hans de Graaff <graaff@gentoo.org> +sinatra-1.4.3.ebuild:
  Version bump.

  11 Aug 2013; Hans de Graaff <graaff@gentoo.org> -sinatra-1.2.7.ebuild,
  -sinatra-1.3.2.ebuild:
  Cleanup.

  16 Jan 2013; Rick Farina <zerochaos@gentoo.org> sinatra-1.2.7.ebuild,
  sinatra-1.3.2.ebuild, sinatra-1.3.3.ebuild:
  adding ~arm keywords to net-analyzer/metasploit rdeps

  27 Sep 2012; Samuli Suominen <ssuominen@gentoo.org> sinatra-1.2.7.ebuild,
  sinatra-1.3.2.ebuild, sinatra-1.3.3.ebuild:
  Remove ~ppc/~ppc64 keywording wrt #396291
