@@ -3,13 +3,15 @@ Hash: SHA256
 
 AUX sinatra-1.4.4-fix-tests.patch 795 SHA256 0ca1f49fe9ed6889241a823e9db9cf410509de924e987cf4ff73798b2c9c84a6 SHA512 d3e8f80e93a46319f91b381133758dd9239ac49bebfdb0ffb39215dc1ba05b780f8224f352d2811e75cf1a77122230efc6673c3a92d9945d035fe3638bfbb995 WHIRLPOOL e80043b9b0bd6ae1e4056d80caafb108b4ff31cfdacd4e6667bfca019b765190406d66823f84154a5a1296fb294aaef571900f3dca83aff0fc243c96bae19cf0
 DIST sinatra-1.4.5.gem 346624 SHA256 3a8083318938048090021481581158ede01e47659d06d192f97a5bfaf950d663 SHA512 4ea57c7e1fdf6b36822ad5a26369e59bb1b45631b87e1a29677421168cd122dcd40561577a034bad5858b0af2c11261a25df8a72af87c6993aca5f0ab13db74b WHIRLPOOL dfeab7b236ea8d9ddc47f26c28e543b52b8605967d208698019c85cb9544438b670743336fb76b29a41d3650a1c2f6a241bcf7d2c25fbf1ca43558445dd05b80
+DIST sinatra-1.4.6.gem 355840 SHA256 87225b2bc25d5806b24bfac05383d4224109ce073b7ece1d3d55e58018e615c2 SHA512 3b80137a8c31bc60c24b4fb4e5984fc9064f52733f5a7214079a50d1c9acfa3046f06935c7eeb611aa4e3d0979fcd88c8db741a08429000a2fb94956c7648552 WHIRLPOOL 7ae683bc03f355c4e99ea94a6661cf89e2effc857e74c7ec0e4d86572999139460b3cb8f3bfa2db8a36c18e6ac9f2d20347d0163cd0271121ac5bdbff8a33ef6
 EBUILD sinatra-1.4.5.ebuild 1508 SHA256 e72d5a566dd6c79fa7287f440b313219a1edc804116e409ef8ef8079b253f7f7 SHA512 eb19f31578e0a74dd5dec699160bd49efacdd4f73ee1c7aed6df5780fdd92509566471c66d46e20106f9ea6c9737a32f5b89888943f0bf4ff27afa4d250d09f5 WHIRLPOOL 7e274592dd79f177e4d79696a4140d564827377c78205ed49867483a604cdb11a8aa8023d5ee9458e4a33b09d621a7308f4e126093857136d6b9ba560661ea91
-MISC ChangeLog 7111 SHA256 a5c3a65f736a6e8b2055d2083be2f50488b17ac935131ab957f4777fbfe6cf78 SHA512 68113f488bc62f1fb649e88ee2616d61940a0d8fa7c36bb90748357df49134ecb1ed3f38efa708fb8dd5f7ab28461d979fbb991eb057138cc0597697382fb334 WHIRLPOOL 9af8a92ee172816135e3af8bdc25caca085220e22d954f5452a953023c6f90e9e124a03e35dcb211f3f5ee2f55e98425a42b3e2ca1dec51df8040d1e6f01d439
+EBUILD sinatra-1.4.6.ebuild 1247 SHA256 f12bb00fc580ed9a37249722e3fbe7d061043568037b9714973733ae27aca2df SHA512 a6a880b0abedb9b98e5c6b954d25b2bc44dee8740ee92d5c8217a4fab94a37085b0d51bfa31db77fcbf1075bc5a44605a1a87d483d8eda0ac47ac6b83fea2178 WHIRLPOOL 91b8f46dc33c76778539c4344fb73438de6cdeda37e6e22ed3636e23e3aba4bb311d8b570b1bdf143a22e0b502c304adcd17c8359ba408e87fccde6dd2e7b491
+MISC ChangeLog 7231 SHA256 8f206107f6ddc58270e7ec71ba1abbbe13c0a4f76d753b56450ff0b4477ff115 SHA512 101743d50f59700ea90cc675ee237bb8a5e0c0c9ab847f3e2c25e46c973065105cff294a000dbcd3ade4b61d16787818069bae8ff5804e3979dbb7e71e9ba657 WHIRLPOOL 79b5b177f468dc4deed6b5d26961b5d974a859359fee6f7765437a85c9a9558e5b77c0a818ff82a8aa95116dc6844f4829d7f14502c9b6483554815afe796080
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlTDYbwACgkQiIP6VqMIqNedNAEAke+NAmXGWTwMoN1KpacmJ+3m
-M++b8tt7Yh85aO/mtUYA/jQsD4WiqP1Q6epFCcqbEda8//NJd9eB7gVkRu96CmE/
-=Gark
+iF4EAREIAAYFAlUY3poACgkQiIP6VqMIqNf2RAD/WcV/qxVt81rBc36nDDLN2TYe
+gJRJxuol61ODnFrF53cA/3yRDav9sXWYlvgocc0clCVqhZ664Yom44W2554GpInj
+=2thp
 -----END PGP SIGNATURE-----
