@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=test? ( ruby_targets_ruby19? ( =dev-ruby/rack-1*[ruby_targets_ruby19] >=dev-ruby/rack-1.4[ruby_targets_ruby19] >=dev-ruby/rack-protection-1.4:1[ruby_targets_ruby19] >=dev-ruby/tilt-1.3.4[ruby_targets_ruby19] <dev-ruby/tilt-3[ruby_targets_ruby19] ) ruby_targets_ruby20? ( =dev-ruby/rack-1*[ruby_targets_ruby20] >=dev-ruby/rack-1.4[ruby_targets_ruby20] >=dev-ruby/rack-protection-1.4:1[ruby_targets_ruby20] >=dev-ruby/tilt-1.3.4[ruby_targets_ruby20] <dev-ruby/tilt-3[ruby_targets_ruby20] ) ruby_targets_ruby21? ( =dev-ruby/rack-1*[ruby_targets_ruby21] >=dev-ruby/rack-1.4[ruby_targets_ruby21] >=dev-ruby/rack-protection-1.4:1[ruby_targets_ruby21] >=dev-ruby/tilt-1.3.4[ruby_targets_ruby21] <dev-ruby/tilt-3[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( test? ( >=dev-ruby/rack-test-0.5.6[ruby_targets_ruby19] dev-ruby/erubis[ruby_targets_ruby19] dev-ruby/builder[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( >=dev-ruby/rack-test-0.5.6[ruby_targets_ruby20] dev-ruby/erubis[ruby_targets_ruby20] dev-ruby/builder[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( >=dev-ruby/rack-test-0.5.6[ruby_targets_ruby21] dev-ruby/erubis[ruby_targets_ruby21] dev-ruby/builder[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( test? ( >=dev-ruby/haml-3.0[ruby_targets_ruby19] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
+DESCRIPTION=Sinatra is a DSL for quickly creating web applications in Ruby with minimal effort
+EAPI=5
+HOMEPAGE=http://www.sinatrarb.com/
+IUSE=test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 test test
+KEYWORDS=~amd64 ~arm ~ppc ~ppc64 ~x86 ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
+LICENSE=MIT
+RDEPEND=ruby_targets_ruby19? ( =dev-ruby/rack-1*[ruby_targets_ruby19] >=dev-ruby/rack-1.4[ruby_targets_ruby19] >=dev-ruby/rack-protection-1.4:1[ruby_targets_ruby19] >=dev-ruby/tilt-1.3.4[ruby_targets_ruby19] <dev-ruby/tilt-3[ruby_targets_ruby19] ) ruby_targets_ruby20? ( =dev-ruby/rack-1*[ruby_targets_ruby20] >=dev-ruby/rack-1.4[ruby_targets_ruby20] >=dev-ruby/rack-protection-1.4:1[ruby_targets_ruby20] >=dev-ruby/tilt-1.3.4[ruby_targets_ruby20] <dev-ruby/tilt-3[ruby_targets_ruby20] ) ruby_targets_ruby21? ( =dev-ruby/rack-1*[ruby_targets_ruby21] >=dev-ruby/rack-1.4[ruby_targets_ruby21] >=dev-ruby/rack-protection-1.4:1[ruby_targets_ruby21] >=dev-ruby/tilt-1.3.4[ruby_targets_ruby21] <dev-ruby/tilt-3[ruby_targets_ruby21] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] )
+REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 )
+SLOT=0
+SRC_URI=mirror://rubygems/sinatra-1.4.6.gem
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	d4f8591e9b20b106327e9d143eb13da5	ruby-ng	c79a9fd7644eefe8009be02a82648e1f	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=85687d208ac889fa52ecb25ced59d433
