@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/sinatra
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sinatra/ChangeLog,v 1.52 2015/01/24 09:11:18 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/sinatra/ChangeLog,v 1.53 2015/03/30 05:26:43 graaff Exp $
+
+*sinatra-1.4.6 (30 Mar 2015)
+
+  30 Mar 2015; Hans de Graaff <graaff@gentoo.org> +sinatra-1.4.6.ebuild:
+  Version bump.
 
   24 Jan 2015; Hans de Graaff <graaff@gentoo.org> -sinatra-1.3.3.ebuild,
   -sinatra-1.4.3.ebuild, -sinatra-1.4.4.ebuild:
